# cnc-tools

./: CMakeLists.txt  LICENSE  README.md  cnctools.py  network.py  setup.sh  utils.py
data/eclipse/: language.settings.xml
data/network/: interfaces_template.mustache
scripts/: README.md  docker-setup.sh  eclipse.sh  msl-setup.sh  ttb-setup.sh
setup/: README.md  eclipse.sh  msl-setup.sh  ttb-setup.sh
