cmake_minimum_required (Version 2.8.11)
project (CLionMaster)
add_subdirectory(./supplementary/system_util/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/process_manager/CMakeLists.txt ../build/test) 
add_subdirectory(./supplementary/fsystem/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/system_config/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/event_handling/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/autodiff/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/constraintsolver/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/pm_control/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/udp_proxy_generator/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/alica_client/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/cnc_geometry/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/nonstd/CMakeLists.txt ../build/test)
add_subdirectory(./supplementary/robot_control/CMakeLists.txt ../build/test)
add_subdirectory(./alica/alica_test/CMakeLists.txt ../build/test)
add_subdirectory(./alica/alica_dummy_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./alica/alica_engine/CMakeLists.txt ../build/test)
add_subdirectory(./alica/alica_ros_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_tmc_motion/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_vision/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_pcl_filters/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/can_connection/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_astra_pro_driver/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/usb_can_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_directed_depth_vision/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/carpet_calibrator/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_localization/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_color_calibrator/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_kick_control/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_goal_detection/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/rt_imu_lib_test/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/rt_imu_lib_test/RTIMULib/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_motion/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_flying_ball_detection/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_actuation_control/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msldriver/msl_goalie_kicker/CMakeLists.txt ../build/test)
add_subdirectory(./msl_gazebo_simulator/msl_gazebo_sim_link/CMakeLists.txt ../build/test)
add_subdirectory(./msl_gazebo_simulator/nubot_gazebo/CMakeLists.txt ../build/test)
add_subdirectory(./msl_gazebo_simulator/msl_gazebo_control/CMakeLists.txt ../build/test)
add_subdirectory(./msl_gazebo_simulator/nubot_description/CMakeLists.txt ../build/test)
add_subdirectory(./msl_gazebo_simulator/nubot_common/CMakeLists.txt ../build/test)
add_subdirectory(./alica-plan-designer/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_bbb/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_black_lib/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_expressions/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_bbb_api/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_sensor_msgs/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_ptgrey_camera/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_robot/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_refbox/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/analyse_kick/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_helper_msgs/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_worldmodel/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/tools/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/tools/basestation/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/libs/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/libs/pman/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/libs/rtdb/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_visualization/src/libs/rtdb/parser/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_base/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_bbb_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_workshop_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_joystick/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_udp_proxy/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_msgs/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_actuator_msgs/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/msl_vision_data_viewer/CMakeLists.txt ../build/test)
add_subdirectory(./cnc-msl/can_connection_bbb/CMakeLists.txt ../build/test)
